@@ -61,7 +61,14 @@ manpagesection(CONSTRUCTORS)
      end), where tt(Iterator) is any iterator type pointing to tt(value_type)
      objects. If identical keys tt(K) are used then only the first occurrence
      of the tt(value_type) object using key tt(K) is inserted.
+
+    itb(LinearMap(std:initializer_list<value_type> initial))
+    The constructor is initialized with the values stored in the
+     tt(std::initializer_list) of tt(value_type) objects. If identical keys
+     tt(K) are used then only the first occurrence of the tt(value_type)
+     object using key tt(K) is inserted.
     )
+
     Default and copy constructors are available.
 
 manpagesection(OVERLOADED OPERATORS)
@@ -71,6 +78,7 @@ manpagesection(OVERLOADED OPERATORS)
 tt(key) was not available prior to the call of the index operator a
 tt(value_map(key, Value()) object is inserted.
     )
+
     The copy assignment operator is available.
 
 manpagesection(MEMBER FUNCTIONS)
